--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class=" backcolor navbar navbar-expand-lg navbar-light py-3 ">
         <div class="container">
             <a class="navbar-brand text-white  " href="#">
-                <h1>Rosenics Technologies</h1>
+                <h3>Rosenics Technologies</h3>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -90,7 +90,7 @@
 
     <div class="container sectiontwo mt-5 px-4">
         <h1 class="display-3 " id="About">About Us</h1>
-        <p class=" text-muted lead fw-bolder ">Rosenics is a technology company built around developing innovations in
+        <p class=" text-muted lead  ">Rosenics is a technology company built around developing innovations in
             Drone Technology for milti-industial
             and commercial applications. we use concepts in Robotics, Data Science, Artificial Intelligience and
             Aviationto create a sustanainable soluton.We operate 3 cardinal rulrs in developing our
@@ -261,7 +261,7 @@
         <div class="container">
             <div class="row mt-5  ">
                 <div class="col-sm ">
-                    <h2 class="fw-bolder text-white mb-4">Rosenics Technology Ltd.</h2>
+                    <h2 class="fw-bold text-white mb-4">Rosenics Technology Ltd.</h2>
                     <p class=" lead rrr text-white text-justify ">Rosenics is a technical company built around
                         developing innovations in Drone Technology for
                         milti-industial and commercial applications. We use concept in Robotics, Data Science,
