--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <nav class=" backcolor navbar navbar-expand-lg navbar-light py-3 ">
         <div class="container">
-            <a class="navbar-brand text-white  " href="#">
-                <h3>Rosenics Technologies</h3>
+            <a class="navbar-brand text-white" href="#">
+             Rosenics Technology 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
